--- a/.travis.yml
+++ b/.travis.yml
@@ -30,12 +30,12 @@ install:
   - ocdev setup core --dir owncloud --branch $BRANCH --no-history
   - cd owncloud
   - ocdev ci $DB
-  # enable myapp
-  - mv ../myapp apps/
-  - php -f console.php app:enable myapp
+  # enable owncollab_chart
+  - mv ../owncollab_chart apps/
+  - php -f console.php app:enable owncollab_chart
 
 before_script:
-  - cd apps/myapp
+  - cd apps/owncollab_chart
 
 script:
   - phpunit -c phpunit.xml
